# mice_service

./: .env  .env.sample  Cargo.toml  GamingMice.json
migrations/2023-05-24-040545_create_table_mice/: down.sql  up.sql
migrations/2023-05-30-173401_create-users-table/: up.sql
src/: main.rs
src/api/: api.rs  mod.rs
src/api/mouse/: mouse.rs
src/models/: mod.rs  mouse.rs
src/models/user/: user.rs
src/repository/: database.rs  schema.rs
